testsuite/gnatprove/tests/T623-013__output_checks/test.out
default command-line output
---------------------------

incr.adb:3:11: medium: overflow check might fail
    3 |   X := X + 1;
      |        ~~^~~
  reason for check: result of addition must fit in a 32-bits machine integer
  possible fix: subprogram at line 1 should mention X in a precondition
    1 |procedure Incr (X : in out Integer) is
      |^ here

brief output
------------
incr.adb:3:11: medium: overflow check might fail

pretty output
-------------

incr.adb:3:11: medium: overflow check might fail
    3 |   X := X + 1;
      |        ~~^~~
  e.g. when X = Integer'Last
  reason for check: result of addition must fit in a 32-bits machine integer
  possible fix: subprogram at line 1 should mention X in a precondition
    1 |procedure Incr (X : in out Integer) is
      |^ here

one-line output
---------------
incr.adb:3:11: medium: overflow check might fail (e.g. when X = Integer'Last) [reason for check: result of addition must fit in a 32-bits machine integer] [possible fix: subprogram at line 1 should mention X in a precondition]

incorrect output value
----------------------
error: wrong argument for --output
Try "gnatprove --help" for more information.
